--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# setup MySQL database
 
+spring.datasource.url=jdbc:mysql://localhost:3306/blog
+spring.datasource.username=ivantsenov
+spring.datasource.password=IVNtsn963
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create-drop
