--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# setup MySQL database
+server.port=5000
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blog
 spring.datasource.username=ivantsenov
@@ -6,3 +6,8 @@ spring.datasource.password=IVNtsn963
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
